--- a/web/resources/PATEstilos.css
+++ b/web/resources/PATEstilos.css
@@ -8,182 +8,281 @@ and open the template in the editor.
     Author     : Dillan
 */
 
-  body {
-      font: 400 15px Lato, sans-serif;
-      line-height: 1.8;
-      color: #818181;
-  }
-  h2 {
-      font-size: 24px;
-      text-transform: uppercase;
-      color: #303030;
-      font-weight: 600;
-      margin-bottom: 30px;
-  }
-  h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      color: #303030;
-      font-weight: 400;
-      margin-bottom: 30px;
-  }  
-  .jumbotron {
-      background-color: #6c132b;
-      color: #fff;
-      padding: 100px 25px;
-      font-family: Montserrat, sans-serif;
-  }
-  .container-fluid {
-      padding: 60px 50px;
-  }
-  .bg-grey {
-      background-color: #f6f6f6;
-  }
-  .logo-small {
-      color: #6c132b;
-      font-size: 50px;
-  }
-  .logo {
-      color: #6c132b;
-      font-size: 200px;
-  }
-  .thumbnail {
-      padding: 0 0 15px 0;
-      border: none;
-      border-radius: 0;
-  }
-  .thumbnail img {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 10px;
-  }
-  .carousel-control.right, .carousel-control.left {
-      background-image: none;
-      color: #6c132b;
-  }
-  .carousel-indicators li {
-      border-color: #6c132b;
-  }
-  .carousel-indicators li.active {
-      background-color: #6c132b;
-  }
-  .item h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      font-weight: 400;
-      font-style: italic;
-      margin: 70px 0;
-  }
-  .item span {
-      font-style: normal;
-  }
-  .panel {
-      border: 1px solid #6c132b; 
-      border-radius:0 !important;
-      transition: box-shadow 0.5s;
-  }
-  .panel:hover {
-      box-shadow: 5px 0px 40px rgba(0,0,0, .2);
-  }
-  .panel-footer .btn:hover {
-      border: 1px solid #6c132b;
-      background-color: #fff !important;
-      color: #6c132b;
-  }
-  .panel-heading {
-      color: #fff !important;
-      background-color: #6c132b !important;
-      padding: 25px;
-      border-bottom: 1px solid transparent;
-      border-top-left-radius: 0px;
-      border-top-right-radius: 0px;
-      border-bottom-left-radius: 0px;
-      border-bottom-right-radius: 0px;
-  }
-  .panel-footer {
-      background-color: white !important;
-  }
-  .panel-footer h3 {
-      font-size: 32px;
-  }
-  .panel-footer h4 {
-      color: #aaa;
-      font-size: 14px;
-  }
-  .panel-footer .btn {
-      margin: 15px 0;
-      background-color: #6c132b;
-      color: #fff;
-  }
-  .navbar {
-      margin-bottom: 0;
-      background-color: #6c132b;
-      z-index: 9999;
-      border: 0;
-      font-size: 12px !important;
-      line-height: 1.42857143 !important;
-      letter-spacing: 4px;
-      border-radius: 0;
-      font-family: Montserrat, sans-serif;
-  }
-  .navbar li a, .navbar .navbar-brand {
-      color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #6c132b !important;
-      background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
-      border-color: transparent;
-      color: #fff !important;
-  }
-  footer .glyphicon {
-      font-size: 20px;
-      margin-bottom: 20px;
-      color: #6c132b;
-  }
-  .slideanim {visibility:hidden;}
-  .slide {
-      animation-name: slide;
-      -webkit-animation-name: slide;	
-      animation-duration: 1s;	
-      -webkit-animation-duration: 1s;
-      visibility: visible;			
-  }
-  @keyframes slide {
+/* Gradient transparent - color - transparent */
+
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.margin{
+    font-size: 12px;
+    margin: 0px 0px 0px 15px;
+    font-weight: bold;
+}
+.by-author{
+    color: black;
+    font-weight: bold;
+    /*margin: 15px 15px;*/
+    line-height: 0.2;
+    font-size: 12px;
+}
+
+.descripcion{
+    color: #303030;
+    font-weight: bold;
+    margin: 0px 0px 0px 15px;
+    line-height: 1.2;
+    font-size: 16px;
+}
+
+a.link-titulo{
+    font-size: 20px;
+    font-weight: bolder ;
+    line-height: 2;
+    color: black;
+    text-decoration: none;
+    margin: 0px 0px 0px 15px;
+    text-transform: uppercase;
+    font-family: Tahoma,Verdana,Segoe,sans-serif; 
+}
+.titulo-seccion{
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 1.1;
+    margin: 10px 10px;
+    text-align: center;
+    color: black;    
+    font-family: Tahoma,Verdana,Segoe,sans-serif; 
+}
+.titulo{
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 1.1;
+    margin: 10px 10px;
+    left: auto;
+    color: black;
+}
+.autor{
+    color: black;
+}
+.time{
+    font-weight: normal;
+    color: dimgray;
+    font-style: italic;
+}
+body {
+    font: 400 15px Lato, sans-serif;
+    line-height: 1.8;
+    color: #818181;
+}
+h2 {
+    font-size: 24px;
+    text-transform: uppercase;
+    color: #303030;
+    font-weight: 600;
+    margin-bottom: 30px;
+}
+h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    color: #303030;
+    font-weight: 400;
+    margin-bottom: 30px;
+}  
+.jumbotron {
+    background-color: #6c132b;
+    color: #fff;
+    padding: 100px 25px;
+    font-family: Montserrat, sans-serif;
+}
+.container-fluid {
+    padding: 60px 50px;
+}
+.bg-grey {
+    background-color: #f6f6f6;
+}
+.logo-small {
+    color: #6c132b;
+    font-size: 50px;
+}
+.logo {
+    color: #6c132b;
+    font-size: 200px;
+}
+.thumbnail {
+    padding: 0 0 15px 0;
+    border: none;
+    border-radius: 0;
+}
+.thumbnail img {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
+.carousel-control.right, .carousel-control.left {
+    background-image: none;
+    color: #6c132b;
+}
+.carousel-indicators li {
+    border-color: #6c132b;
+}
+.carousel-indicators li.active {
+    background-color: #6c132b;
+}
+.item h4 {
+    font-size: 19px;
+    line-height: 1.375em;
+    font-weight: 400;
+    font-style: italic;
+    margin: 70px 0;
+}
+.item span {
+    font-style: normal;
+}
+.panel {
+    border: 1px solid #6c132b; 
+    border-radius:0 !important;
+    transition: box-shadow 0.5s;
+}
+.panel:hover {
+    box-shadow: 5px 0px 40px rgba(0,0,0, .2);
+}
+.panel-footer .btn:hover {
+    border: 1px solid #6c132b;
+    background-color: #fff !important;
+    color: #6c132b;
+}
+.panel-heading {
+    color: #fff !important;
+    background-color: #6c132b !important;
+    padding: 25px;
+    border-bottom: 1px solid transparent;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+}
+.panel-footer {
+    background-color: white !important;
+}
+.panel-footer h3 {
+    font-size: 32px;
+}
+.panel-footer h4 {
+    color: #aaa;
+    font-size: 14px;
+}
+.panel-footer .btn {
+    margin: 15px 0;
+    background-color: #6c132b;
+    color: #fff;
+}
+.navbar {
+    margin-bottom: 0;
+    background-color: #6c132b;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+    font-family: Montserrat, sans-serif;
+}
+.navbar li a, .navbar .navbar-brand {
+    color: #fff !important;
+}
+.navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #6c132b !important;
+    background-color: #fff !important;
+}
+.navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #fff !important;
+}
+footer .glyphicon {
+    font-size: 20px;
+    margin-bottom: 20px;
+    color: #6c132b;
+}
+.slideanim {visibility:hidden;}
+.slide {
+    animation-name: slide;
+    -webkit-animation-name: slide;	
+    animation-duration: 1s;	
+    -webkit-animation-duration: 1s;
+    visibility: visible;			
+}
+@keyframes slide {
     0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
+        opacity: 0;
+        -webkit-transform: translateY(70%);
     } 
     100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
+        opacity: 1;
+        -webkit-transform: translateY(0%);
     }	
-  }
-  @-webkit-keyframes slide {
+}
+@-webkit-keyframes slide {
     0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
+        opacity: 0;
+        -webkit-transform: translateY(70%);
     } 
     100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
+        opacity: 1;
+        -webkit-transform: translateY(0%);
     }
-  }
-  @media screen and (max-width: 768px) {
+}
+@media screen and (max-width: 768px) {
     .col-sm-4 {
-      text-align: center;
-      margin: 25px 0;
+        text-align: center;
+        margin: 25px 0;
     }
     .btn-lg {
         width: 100%;
         margin-bottom: 35px;
     }
-  }
-  @media screen and (max-width: 480px) {
+    .titulo-seccion{
+        font-size: 30px;
+    }
+    a.link-titulo{
+        font-size: 18px;
+    }
+}
+@media screen and (max-width: 480px) {
     .logo {
         font-size: 150px;
     }
-  }
+    .titulo-seccion{
+        font-size: 20px; 
+    }
+    a.link-titulo{
+        font-size: 14px;
+    }
+}
+/* xs */
+img.giant {
+    width: 100px;
+    height: auto;
+}
+/* sm */
+@media (min-width: 768px) {
+    img.giant {
+        width: 120px;
+    }
+}
+/* md */
+@media (min-width: 992px) {
+    img.giant {
+        width: 190px;
+    }
+}
+/* lg */
+@media (min-width: 1200px) {
+    img.giant {
+        width: 210px;
+    }
+}
 
 
