Se mejoró la interfaz del apartado de mensajes, ahora se recarga la pagina del mensaje en el mismo usuario con el que se estaba conversando. Se agrego el logo de la plataforma.

--- a/web/resources/PATEstilos.css
+++ b/web/resources/PATEstilos.css
@@ -16,15 +16,15 @@ and open the template in the editor.
     font-size: 12px;
 }
 
-.right {
-    float: right
-}​
-
 hr {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
+
+.right {
+    float: right
+}​
 
 .margin{
     font-size: 12px;
@@ -129,6 +129,12 @@ h4 {
     color: #6c132b;
     font-size: 200px;
 }
+img.logo {
+    width: 70%;
+    height: 170%;
+    margin-bottom: 2px;
+}
+
 .thumbnail {
     padding: 0 0 15px 0;
     border: none;
