--- a/web/resources/PATEstilos.css
+++ b/web/resources/PATEstilos.css
@@ -8,12 +8,8 @@ and open the template in the editor.
     Author     : Dillan
 */
 
-/* Gradient transparent - color - transparent */
-.msg-author{
-    color: black;
-    font-weight: bold;
-    line-height: 1.2;
-    font-size: 12px;
+.justificado{
+    text-align: justify;
 }
 
 hr {
@@ -21,75 +17,6 @@ hr {
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
-
-.right {
-    float: right
-}​
-
-.margin{
-    font-size: 12px;
-    margin: 0px 0px 0px 15px;
-    font-weight: bold;
-}
-.by-author{
-    color: black;
-    font-weight: bold;
-    /*margin: 15px 15px;*/
-    line-height: 0.2;
-    font-size: 12px;
-}
-
-.descripcion{
-    color: #303030;
-    font-weight: bold;
-    margin: 0px 0px 0px 15px;
-    line-height: 1.2;
-    font-size: 16px;
-}
-
-a.link-titulo{
-    font-size: 20px;
-    font-weight: bolder ;
-    line-height: 2;
-    color: black;
-    text-decoration: none;
-    margin: 0px 0px 0px 15px;
-    text-transform: uppercase;
-    font-family: Tahoma,Verdana,Segoe,sans-serif; 
-}
-.titulo-seccion{
-    font-size: 50px;
-    font-weight: bold;
-    line-height: 1.1;
-    margin: 10px 10px;
-    text-align: center;
-    color: black;    
-    font-family: Tahoma,Verdana,Segoe,sans-serif; 
-}
-.titulo{
-    font-size: 40px;
-    font-weight: bold;
-    line-height: 1.1;
-    margin: 10px 10px;
-    left: auto;
-    color: black;
-}
-.autor{
-    color: black;
-}
-.time{
-    font-weight: normal;
-    color: dimgray;
-    font-style: italic;
-}
-.time-chat{
-    text-align: right;
-    font-weight: normal;
-    font-size: 11px;
-    color: indigo;
-    font-style: oblique;
-}
-
 body {
     font: 400 15px Lato, sans-serif;
     line-height: 1.8;
@@ -109,6 +36,46 @@ h4 {
     font-weight: 400;
     margin-bottom: 30px;
 }  
+
+.margen{
+    font-size: 12px;
+    margin: 0px 0px 0px 15px;
+    font-weight: bold;
+}
+/* Gradient transparent - color - transparent */
+.msg-author{
+    color: black;
+    font-weight: bold;
+    line-height: 1.2;
+    font-size: 12px;
+}
+.right {
+    float: right
+}​
+
+.descripcion{
+    color: #303030;
+    font-weight: bold;
+    margin: 0px 0px 0px 15px;
+    line-height: 1.2;
+    font-size: 16px;
+}
+
+.autor{
+    color: black;
+}
+.time{
+    font-weight: normal;
+    color: dimgray;
+    font-style: italic;
+}
+.time-chat{
+    text-align: right;
+    font-weight: normal;
+    font-size: 11px;
+    color: indigo;
+    font-style: oblique;
+}
 .jumbotron {
     background-color: #6c132b;
     color: #fff;
@@ -238,6 +205,17 @@ footer .glyphicon {
     -webkit-animation-duration: 1s;
     visibility: visible;			
 }
+/*
+a.link-titulo{
+    font-size: 20px;
+    font-weight: bolder ;
+    line-height: 2;
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: Tahoma,Verdana,Segoe,sans-serif; 
+}
+*/
 @keyframes slide {
     0% {
         opacity: 0;
@@ -258,33 +236,6 @@ footer .glyphicon {
         -webkit-transform: translateY(0%);
     }
 }
-@media screen and (max-width: 768px) {
-    .col-sm-4 {
-        text-align: center;
-        margin: 25px 0;
-    }
-    .btn-lg {
-        width: 100%;
-        margin-bottom: 35px;
-    }
-    .titulo-seccion{
-        font-size: 30px;
-    }
-    a.link-titulo{
-        font-size: 18px;
-    }
-}
-@media screen and (max-width: 480px) {
-    .logo {
-        font-size: 150px;
-    }
-    .titulo-seccion{
-        font-size: 20px; 
-    }
-    a.link-titulo{
-        font-size: 14px;
-    }
-}
 /* xs */
 img.giant {
     width: 100px;
@@ -294,29 +245,3 @@ img.chat {
     width: 50px;
     height: auto;
 }
-/* xs */
-@media (max-width: 767px) {
-    img.chat {
-        width: 20px;
-    }
-}
-/* sm */
-@media (min-width: 768px) {
-    img.giant {
-        width: 120px;
-    }
-}
-/* md */
-@media (min-width: 992px) {
-    img.giant {
-        width: 190px;
-    }
-}
-/* lg */
-@media (min-width: 1200px) {
-    img.giant {
-        width: 210px;
-    }
-}
-
-
